# dropout_MC

./: hello.py  pyproject.toml
_01_data/code/: read_data.ipynb
_02_build/code/: build.ipynb
_02_build/data/: processed_data.csv  test_data.csv  train_data.csv
_03_analyze/code/: check_uncertainty.ipynb  data_added_train.ipynb  train.ipynb
_03_analyze/result/: add_data_random_model_pred.csv  add_selected_data_model_pred.csv  initial_model_pred.csv  match_result_df.csv
_04_report/code/: compute_metrics.ipynb  plot_templature.ipynb
